--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>Welcome to my page!</h1>
-	<img src="image.jpg" alt="My Image" width="500">
+	<img src="Cloud me.png" alt="My Image" width="500">
 	<p>This is an image of my favorite place in the world. I hope you enjoy it as much as I do!</p>
 </body>
 </html>
